Thu Dec  3 11:00:46 1998  Adam Fedor  <fedor@ultra.doc.com>

	* aclocal.m4: Add OBJC_CON_AUTOLOAD and OBJC_SYS_AUTOLOAD
 	requirements to OBJC_SYS_DYNAMIC_LINKER test.

Wed Dec  2 16:11:05 1998  Adam Fedor  <fedor@ultra.doc.com>

	* src/NSDictionary.m (-fileGroupOwnerAccountName): New method.
	(-fileModificationDate): Likewise.
	(fileOwnerAccountName): Likewise.
	(filePosixPermissions): Likewise.
	(fileSize): Likewise.
	(fileSystemFileNumber): Likewise.
	(fileSystemNumber): Likewise.
	(fileType): Likewise. 
	* src/include/NSDictionary.h: New methods. Contributed by Camile
	TROILLARD <tuscland@wanadoo.fr>. 
	
Wed Dec  2 20:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/GNUmakefile: Added NSDateFormatter
	* src/Makefile.postamle: Bugfix in installation - was adding service
	entries when not needed.
	* src/NSDate.m: Added natural language support.
	* src/NSDateFormatter.m: Implemented this class.
	* src/externs.m: Added natural language support.
	* src/include/Foundation.h: Added missing headers.
	* src/include/NSDate.h: Added natural language stuff.
	* src/include/NSDateFormatter.h: Contributed by Camile TROILLARD
	<tuscland@wanadoo.fr> and updated to match implementation.
	* src/include/NSDecimalNumber.h: Added header (contributed by Camile) -
	no implementation yet.
	* src/include/NSDecimal.h: Added header - no implementation yet.
	* src/include/NSUserDefaults.h: Added natural language stuff.

Tue Dec  1 09:31:59 1998  Adam Fedor  <fedor@ultra.doc.com>

	* src/Makefile.postamble: new variable INSTALL_ROOT_DIR, such that
 	/etc/services can be installed somewhere (need this for building
 	Debian binary packages). Patch from Matthias Klose
	<doko@cs.tu-berlin.de>.

Mon Nov 30 10:20:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSTask: Minor bugfix -ignore SIGCHLD
	* src/NSUserDefaults: bugfix in registerDefaults: was replacing rather
	than addning defaults. Also changed to cache dictionaryRepresaentation.